--- a/docker/services/frontend/html/config-watchdog.html
+++ b/docker/services/frontend/html/config-watchdog.html
@@ -680,6 +680,33 @@
             opacity: 0.7;
         }
 
+        .service-alert-toggle .service-actions {
+            display: flex;
+            align-items: center;
+            gap: 0.5rem;
+        }
+
+        .btn-test-failure {
+            padding: 0.2rem 0.4rem;
+            font-size: 0.7rem;
+            background: rgba(244, 67, 54, 0.15);
+            color: #e57373;
+            border: 1px solid rgba(244, 67, 54, 0.3);
+            border-radius: 4px;
+            cursor: pointer;
+            transition: all 0.2s;
+            white-space: nowrap;
+        }
+
+        .btn-test-failure:hover {
+            background: rgba(244, 67, 54, 0.3);
+        }
+
+        .btn-test-failure:disabled {
+            opacity: 0.4;
+            cursor: not-allowed;
+        }
+
         /* Mini Toggle Switch */
         .toggle-switch-mini {
             position: relative;
@@ -1486,13 +1513,18 @@
                         <span class="service-icon">${config.icon}</span>
                         <span class="service-name">${config.name}</span>
                     </div>
-                    <label class="toggle-switch-mini">
-                        <input type="checkbox"
-                               id="alert-check-${serviceName}"
-                               ${enabled ? 'checked' : ''}
-                               onchange="toggleServiceAlert('${serviceName}', this.checked)">
-                        <span class="toggle-slider"></span>
-                    </label>
+                    <div class="service-actions">
+                        <button class="btn-test-failure" onclick="simulateServiceFailure('${serviceName}')" title="Simuliert einen Ausfall für diesen Service">
+                            ⚡ Test
+                        </button>
+                        <label class="toggle-switch-mini">
+                            <input type="checkbox"
+                                   id="alert-check-${serviceName}"
+                                   ${enabled ? 'checked' : ''}
+                                   onchange="toggleServiceAlert('${serviceName}', this.checked)">
+                            <span class="toggle-slider"></span>
+                        </label>
+                    </div>
                 </div>
             `;
         }
@@ -1562,6 +1594,39 @@
             } catch (err) {
                 console.error('Error toggling category:', err);
                 showToast('Fehler beim Speichern', 'error');
+            }
+        }
+
+        // Simulate service failure for testing alerts
+        async function simulateServiceFailure(serviceName) {
+            const config = SERVICE_ALERT_CONFIG[serviceName];
+            const displayName = config ? config.name : serviceName;
+
+            if (!confirm(`Möchten Sie einen Ausfall für "${displayName}" simulieren?\n\nDies löst einen Alert aus (sofern aktiviert) und wird beim nächsten Health-Check automatisch korrigiert.`)) {
+                return;
+            }
+
+            try {
+                const res = await fetch(`${API_BASE}/services/${serviceName}/simulate-failure`, {
+                    method: 'POST'
+                });
+
+                if (!res.ok) {
+                    const error = await res.json();
+                    throw new Error(error.detail || 'Simulation fehlgeschlagen');
+                }
+
+                const data = await res.json();
+                showToast(`Ausfall für "${displayName}" simuliert - Alert wird verarbeitet`, 'warning');
+
+                // Aktualisiere Alert-Historie nach kurzer Verzögerung
+                setTimeout(() => {
+                    loadAlertHistory();
+                }, 1000);
+
+            } catch (err) {
+                console.error('Error simulating failure:', err);
+                showToast(`Fehler: ${err.message}`, 'error');
             }
         }
 
